[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/art/gameover.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0235294, 0.364706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = 3.05176e-05
margin_right = 240.0
margin_bottom = 200.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 11.0
margin_right = 161.0
margin_bottom = 199.0
rect_min_size = Vector2( 150, 0 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 130.0
margin_bottom = 179.0

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 165.0
margin_right = 315.0
margin_bottom = 199.0
rect_min_size = Vector2( 150, 0 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 130.0
margin_bottom = 179.0

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
margin_left = 319.0
margin_right = 469.0
margin_bottom = 199.0
rect_min_size = Vector2( 150, 0 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MarginContainer3"]
margin_left = 20.0
margin_top = 20.0
margin_right = 130.0
margin_bottom = 179.0

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer3/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionLabel" type="Label" parent="."]
margin_left = 24.0
margin_top = 128.0
margin_right = 456.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 2 )
text = "Đặt số 9 vào ô thứ nhất"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
